Create index.html for privacy and surveillance project
Added a comprehensive HTML structure discussing privacy and mass surveillance, including sections on introduction, scientific context, social impact, and conclusions.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,129 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Privacidad y Vigilancia Masiva - Proyecto CTS</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      background-color: #0f1114;
+      color: #f5f5f5;
+      line-height: 1.6;
+    }
+    header {
+      background-color: #20232a;
+      padding: 40px 20px;
+      text-align: center;
+    }
+    header h1 {
+      font-size: 2.5em;
+      color: #61dafb;
+      margin-bottom: 10px;
+    }
+    header p {
+      color: #bbb;
+      font-size: 1.1em;
+    }
+    section {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 20px;
+      background: #181a1f;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+    }
+    section h2 {
+      color: #61dafb;
+      border-bottom: 2px solid #61dafb;
+      padding-bottom: 5px;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #20232a;
+      color: #aaa;
+      font-size: 0.9em;
+      margin-top: 50px;
+    }
+  </style>
+</head>
+<body>
 
+  <header>
+    <h1>Privacidad y Vigilancia Masiva</h1>
+    <p>Proyecto Final Integrador – Ciencia, Tecnología y Sociedad</p>
+  </header>
+
+  <section>
+    <h2>1. Introducción</h2>
+    <p>
+      En la actualidad, la privacidad se ha convertido en uno de los temas más debatidos dentro de la relación entre ciencia, tecnología y sociedad. 
+      El avance de los sistemas digitales, el uso masivo de redes sociales y la expansión de los dispositivos inteligentes han generado nuevas formas de vigilancia,
+      muchas veces invisibles, que ponen en tensión los límites entre seguridad, libertad y control.
+    </p>
+  </section>
+
+  <section>
+    <h2>2. Contexto Científico y Tecnológico</h2>
+    <p>
+      La vigilancia masiva surge del desarrollo científico en áreas como la inteligencia artificial, el big data y la informática. 
+      Estas tecnologías permiten recolectar, analizar y cruzar grandes volúmenes de datos personales en tiempo real. 
+      Organismos estatales y corporaciones privadas utilizan esta información para fines de seguridad, marketing o control social.
+    </p>
+  </section>
+
+  <section>
+    <h2>3. Impacto Social y Ético</h2>
+    <p>
+      La vigilancia constante modifica las formas en que las personas se comportan y se relacionan. 
+      Se genera una sensación de observación permanente que afecta la libertad de expresión y la intimidad individual. 
+      Desde el punto de vista ético, se discuten los límites de la recolección de datos y la responsabilidad de quienes los manipulan.
+    </p>
+  </section>
+
+  <section>
+    <h2>4. Análisis desde la Perspectiva CTS</h2>
+    <p>
+      Desde el enfoque de Ciencia, Tecnología y Sociedad, la vigilancia masiva no puede entenderse solo como un fenómeno técnico, 
+      sino como un entramado sociotécnico donde intervienen intereses políticos, económicos y culturales. 
+      La tecnología, lejos de ser neutral, refleja las estructuras de poder que la crean y la utilizan.
+    </p>
+  </section>
+
+  <section>
+    <h2>5. Innovación del Grupo</h2>
+    <p>
+      Este sitio propone una mirada crítica e interactiva sobre la vigilancia digital, 
+      invitando a reflexionar sobre los límites de la privacidad y el rol ciudadano en la era del dato. 
+      El objetivo es concientizar sobre cómo nuestras acciones cotidianas generan información valiosa que puede ser usada para perfilar, predecir y controlar comportamientos.
+    </p>
+  </section>
+
+  <section>
+    <h2>6. Conclusiones</h2>
+    <p>
+      La privacidad se redefine constantemente en la sociedad tecnológica. 
+      Frente a los avances científicos, es necesario fortalecer los marcos éticos, legales y educativos que permitan proteger la libertad individual sin detener el progreso. 
+      Comprender el fenómeno desde CTS nos ayuda a construir un futuro más consciente y equilibrado entre ciencia, poder y humanidad.
+    </p>
+  </section>
+
+  <section>
+    <h2>7. Bibliografía y Prompts Usados</h2>
+    <ul>
+      <li>Zuboff, S. (2019). <em>The Age of Surveillance Capitalism</em>. PublicAffairs.</li>
+      <li>Han, B. C. (2013). <em>La sociedad de la transparencia</em>. Herder.</li>
+      <li>Prompt IA: “Explicame paso a paso cómo publicar una web en Railway con GitHub” – ChatGPT, 1 de noviembre de 2025, 18:00 hs.</li>
+      <li>Prompt IA: “Generar estructura CTS sobre privacidad y vigilancia masiva” – ChatGPT, 1 de noviembre de 2025, 18:45 hs.</li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>© 2025 - Proyecto CTS: Privacidad y Vigilancia Masiva | Desarrollado por Pili</p>
+  </footer>
+
+</body>
+</html>
